--- a/Sheaft.Manage/Views/Jobs/Index.cshtml
+++ b/Sheaft.Manage/Views/Jobs/Index.cshtml
@@ -5,99 +5,112 @@
     int currentPage = ViewBag.Page;
 }
 
-<div class="container">
-    <h1 class="display-4">Jobs</h1>
-    <br />
-
-    @if (ViewBag.Removed != null)
-    {
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully removed job @ViewBag.Removed</span>
-
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
+    <div class="container">
+        <h2 class="display-5">Jobs</h2>
         <br />
-    }
 
-    @if (ViewBag.Edited != null)
-    {
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully updated job @ViewBag.Edited.Name</span>
-            <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+        @if (ViewBag.Removed != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <span>Successfully removed job @ViewBag.Removed</span>
 
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <br />
-    }
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <br />
+        }
 
-    <table class="table table-hover">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Status</th>
-                <th scope="col">CreatedOn</th>
-                <th scope="col">Archived</th>
-                <th scope="col">Removed</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var entity in Model)
-            {
-            <tr>
-                <th scope="row">@entity.Name</th>
-                <td>@entity.Status</td>
-                <td>@entity.CreatedOn</td>
-                <td>@entity.Archived</td>
-                <td>@entity.RemovedOn.HasValue</td>
-                <td>
-                    <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
-                        <i class="fa fa-pen"></i>
-                    </a>
+        @if (ViewBag.Restored != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <span>Successfully restored job @ViewBag.Restored.Name</span>
+                <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@ViewBag.Restored.Id">View details</a>
 
-                    @if (entity.RemovedOn.HasValue)
-                    {
-                        @using (Html.BeginForm("Restore", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                        {
-                            <button type="submit" class="btn btn-success">
-                                <i class="fa fa-trash-restore"></i>
-                            </button>
-                        }
-                    }
-                    else
-                    {
-                        @using (Html.BeginForm("Delete", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                        {
-                            <button type="submit" class="btn btn-danger">
-                                <i class="fa fa-trash"></i>
-                            </button>
-                        }
-                    }
-                </td>
-            </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr class="text-center">
-                <td colspan="4">
-                    @if (currentPage >= 1)
-                    {
-                        <a asp-controller="Jobs" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-info">
-                            <i class="fa fa-caret-left"></i>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <br />
+        }
+
+        @if (ViewBag.Edited != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <span>Successfully updated job @ViewBag.Edited.Name</span>
+                <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <br />
+        }
+
+        <table class="table table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">CreatedOn</th>
+                    <th scope="col">Archived</th>
+                    <th scope="col">Removed</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var entity in Model)
+                {
+                <tr>
+                    <th scope="row">@entity.Name</th>
+                    <td>@entity.Status</td>
+                    <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
+                    <td>@entity.Archived</td>
+                    <td>@entity.RemovedOn.HasValue</td>
+                    <td>
+                        <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                            <i class="fa fa-pen"></i>
                         </a>
-                    }
-                    @if (take == Model.Count())
-                    {
-                        <a asp-controller="Jobs" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-info">
-                            <i class="fa fa-caret-right"></i>
-                        </a>
-                    }
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-</div>
+
+                        @if (entity.RemovedOn.HasValue)
+                        {
+                            @using (Html.BeginForm("Restore", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            {
+                                <button type="submit" class="btn btn-success">
+                                    <i class="fa fa-trash-restore"></i>
+                                </button>
+                            }
+                        }
+                        else
+                        {
+                            @using (Html.BeginForm("Delete", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            {
+                                <button type="submit" class="btn btn-danger">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                            }
+                        }
+                    </td>
+                </tr>
+                }
+            </tbody>
+            <tfoot>
+                <tr class="text-center">
+                    <td colspan="6">
+                        @if (currentPage >= 1)
+                        {
+                            <a asp-controller="Jobs" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
+                                <i class="fa fa-caret-left"></i>
+                            </a>
+                        }
+                        @if (take == Model.Count())
+                        {
+                            <a asp-controller="Jobs" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
+                                <i class="fa fa-caret-right"></i>
+                            </a>
+                        }
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
