--- a/Sheaft.Manage/Views/Packagings/Edit.cshtml
+++ b/Sheaft.Manage/Views/Packagings/Edit.cshtml
@@ -10,7 +10,7 @@
 }
 
     <div class="container">
-        <h1 class="display-4">Packaging details</h1>
+        <h2 class="display-4">Packaging details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
         <br />
 
         @using (Html.BeginForm("Edit", "Packagings", FormMethod.Post, new { @class = "form" }))
