--- a/Sheaft.Manage/Views/Users/Edit.cshtml
+++ b/Sheaft.Manage/Views/Users/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
     <div class="container">
-        <h1 class="display-4">User details</h1>
+        <h2 class="display-4">User details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
         <br />
 
         @using (Html.BeginForm("Edit", "Users", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
