--- a/Sheaft.Manage/Views/DeliveryModes/Index.cshtml
+++ b/Sheaft.Manage/Views/DeliveryModes/Index.cshtml
@@ -6,13 +6,26 @@
 }
 
 <div class="container">
-    <h1 class="display-4">DeliveryModes</h1>
+    <h2 class="display-5">DeliveryModes</h2>
     <br />
 
     @if (ViewBag.Removed != null)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
             <span>Successfully removed delivery mode @ViewBag.Removed</span>
+
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <br />
+    }
+
+    @if (ViewBag.Restored != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <span>Successfully restored deliveryMode @ViewBag.Restored.Name</span>
+            <a asp-controller="DeliveryModes" asp-action="Edit" asp-route-id="@ViewBag.Restored.Id">View details</a>
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -42,7 +55,11 @@
                 <th scope="col">Lock</th>
                 <th scope="col">CreatedOn</th>
                 <th scope="col">Removed</th>
-                <th scope="col"></th>
+                <th scope="col">
+                    <a asp-controller="DeliveryModes" asp-action="Add" class="btn btn-success">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -52,7 +69,7 @@
                 <th scope="row">@entity.Name</th>
                 <td>@entity.Kind</td>
                 <td>@(entity.LockOrderHoursBeforeDelivery)h</td>
-                <td>@entity.CreatedOn</td>
+                <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
                 <td>@entity.RemovedOn.HasValue</td>
                 <td>
                     <a asp-controller="DeliveryModes" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
@@ -83,16 +100,16 @@
         </tbody>
         <tfoot>
             <tr class="text-center">
-                <td colspan="4">
+                <td colspan="6">
                     @if (currentPage >= 1)
                     {
-                        <a asp-controller="DeliveryModes" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-info">
+                        <a asp-controller="DeliveryModes" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
                             <i class="fa fa-caret-left"></i>
                         </a>
                     }
                     @if (take == Model.Count())
                     {
-                        <a asp-controller="DeliveryModes" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-info">
+                        <a asp-controller="DeliveryModes" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
                             <i class="fa fa-caret-right"></i>
                         </a>
                     }
