--- a/Sheaft.Manage/Views/Products/Add.cshtml
+++ b/Sheaft.Manage/Views/Products/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductViewModel
 @{
-    ViewData["Title"] = "Product details";
+    ViewData["Title"] = "New Product";
     var vats = new List<SelectListItem> {
         new SelectListItem("5.5%", "5.5"),
         new SelectListItem("10%", "10"),
@@ -18,18 +18,16 @@
     var tags = ((List<TagViewModel>)ViewBag.Tags).Select(c => new SelectListItem(c.Name, c.Id.ToString("D"))).ToList();
     var packagings = ((List<PackagingViewModel>)ViewBag.Packagings).Select(c => new SelectListItem(c.Name, c.Id.ToString("D"))).ToList();
     packagings.Insert(0, new SelectListItem("None", null));
-
 }
 
     <div class="container">
-        <h2 class="display-4">Product details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+        <h1 class="display-5">New Product</h1>
         <br />
 
-        @using (Html.BeginForm("Edit", "Products", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("Add", "Products", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
             <br />
 
             <div class="form-group">
@@ -55,26 +53,6 @@
             <div class="form-group">
                 @Html.LabelFor(c => c.Unit, new { @class = "form-label" })
                 @Html.DropDownListFor(c => c.Unit, units, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.VatPricePerUnit)
-                @Html.TextBoxFor(m => m.VatPricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.OnSalePricePerUnit)
-                @Html.TextBoxFor(m => m.OnSalePricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.VatPrice)
-                @Html.TextBoxFor(m => m.VatPrice, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.OnSalePrice)
-                @Html.TextBoxFor(m => m.OnSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.WholeSalePrice)
-                @Html.TextBoxFor(m => m.WholeSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
@@ -106,7 +84,7 @@
                 Cancel
             </a>
             <button type="submit" class="btn btn-success">
-                <i class="fa fa-check">&nbsp;Save</i>
+                <i class="fa fa-plus">&nbsp;Create</i>
             </button>
         }
 
