--- a/Sheaft.Manage/wwwroot/css/site.css
+++ b/Sheaft.Manage/wwwroot/css/site.css
@@ -69,3 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.container {
+    max-width: 100%;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+.table td, .table th,
+.table .thead-dark th {
+    vertical-align: middle;
+}
